# server/internal/models/structures.go
@@ -56,7 +56,7 @@ type BlindJSON struct {
 
 type CreateStructureRequest struct {
 	Name   string      `json:"name" binding:"required"`
-	Blinds []BlindJSON `json:"blinds" binding:"required,dive"`
+	Blinds []BlindJSON `json:"blinds" binding:"required,min=1,dive"`
 }
 
 type UpdateStructureRequest struct {
